; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog.c_test_refs_reflog_reflog__fails_gracefully_on_nonempty_reflog_dir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_reflog.c_test_refs_reflog_reflog__fails_gracefully_on_nonempty_reflog_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@current_master_tip = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"refs/heads/new-dir/new-head\00", align 1
@GIT_REFLOG_DIR = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [41 x i8] c"testrepo.git/refs/heads/new-dir/new-head\00", align 1
@GIT_EDIRECTORY = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [19 x i8] c"refs/heads/new-dir\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_reflog_reflog__fails_gracefully_on_nonempty_reflog_dir() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* @current_master_tip, align 4
  %6 = call i32 @git_oid_fromstr(i32* %3, i32 %5)
  %7 = load i32, i32* @g_repo, align 4
  %8 = call i32 @git_reference_create(i32** %1, i32 %7, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32* %3, i32 0, i32* null)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_reference_free(i32* %10)
  %12 = load i32, i32* @g_repo, align 4
  %13 = call i32 @git_repository_path(i32 %12)
  %14 = load i8*, i8** @GIT_REFLOG_DIR, align 8
  %15 = call i32 @git_buf_joinpath(i32* %2, i32 %13, i8* %14)
  %16 = call i32 @git_buf_cstr(i32* %2)
  %17 = call i32 @git_buf_joinpath(i32* %2, i32 %16, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @git_buf_cstr(i32* %2)
  %19 = call i32 @git_path_isfile(i32 %18)
  %20 = call i32 @cl_assert_equal_i(i32 1, i32 %19)
  %21 = call i32 @p_unlink(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %22 = call i32 @cl_must_pass(i32 %21)
  %23 = load i32, i32* @current_master_tip, align 4
  %24 = call i32 @git_oid_fromstr(i32* %3, i32 %23)
  %25 = load i32, i32* @GIT_EDIRECTORY, align 4
  %26 = load i32, i32* @g_repo, align 4
  %27 = call i32 @git_reference_create(i32** %1, i32 %26, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i32* %3, i32 0, i32* null)
  %28 = call i32 @cl_git_fail_with(i32 %25, i32 %27)
  %29 = load i32*, i32** %1, align 8
  %30 = call i32 @git_reference_free(i32* %29)
  %31 = call i32 @git_buf_dispose(i32* %2)
  ret void
}

declare dso_local i32 @git_oid_fromstr(i32*, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_create(i32**, i32, i8*, i32*, i32, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_buf_joinpath(i32*, i32, i8*) #1

declare dso_local i32 @git_repository_path(i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_path_isfile(i32) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i8*) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
